fix: menu buttons on mobile with pill

--- a/internal/view/assets/less/archive.less
+++ b/internal/view/assets/less/archive.less
@@ -1,3 +1,5 @@
+@import "./variables.less";
+
 :root {
 	--main: #f44336;
 	--border: #e5e5e5;
@@ -9,10 +11,6 @@
 		--archiveHeaderBg: rgba(41, 41, 41, 0.95);
 	}
 }
-
-@header-height: 60px;
-@screen-sm-max: 600px;
-@screen-sm-header-height: 50px;
 
 body {
 	padding: 0;
@@ -32,9 +30,9 @@ body.archive {
 	.header {
 		display: flex;
 		flex-flow: row wrap;
-		height: @header-height;
+		height: @header-height-desktop;
 		box-sizing: border-box;
-		padding: 0 16px;
+		padding: 0 @padding-standard;
 		align-items: center;
 		font-size: 16px;
 		border-bottom: 1px solid var(--border);
@@ -49,7 +47,7 @@ body.archive {
 		}
 
 		> *:not(:last-child) {
-			margin-right: 8px;
+			margin-right: @padding-small;
 		}
 
 		> .spacer {
@@ -62,7 +60,7 @@ body.archive {
 			color: var(--main);
 
 			span {
-				margin-right: 8px;
+				margin-right: @padding-small;
 			}
 		}
 
@@ -79,7 +77,7 @@ body.archive {
 
 		@media (max-width: @screen-sm-max) {
 			font-size: 14px;
-			height: @screen-sm-header-height;
+			height: @header-height-mobile;
 
 			#shiori-logo {
 				font-size: 1.5em;
@@ -90,5 +88,6 @@ body.archive {
 	iframe {
 		width: 100%;
 		height: 100%;
+		padding-bottom: env(safe-area-inset-bottom);
 	}
 }
